// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render default slot correctly 1`] = `
<div role="button"
     class="r-action-bar-icon"
     tabindex="0"
>
  <div class="r-badge__wrapper r-icon r-icon-undefined r-action-bar-icon__icon">
  </div>
  Content
</div>
`;

exports[`should render icon slot correctly 1`] = `
<div role="button"
     class="r-action-bar-icon"
     tabindex="0"
>
  <div class="r-badge__wrapper r-action-bar-icon__icon">
    Custom Icon
  </div>
  Content
</div>
`;

exports[`should render icon slot with badge correctly 1`] = `
<div role="button"
     class="r-action-bar-icon"
     tabindex="0"
>
  <div class="r-badge__wrapper r-action-bar-icon__icon">
    Custom Icon
    <div class="r-badge r-badge--top-right r-badge--fixed">
      1
    </div>
  </div>
  Content
</div>
`;

exports[`should render icon slot with dot correctly 1`] = `
<div role="button"
     class="r-action-bar-icon"
     tabindex="0"
>
  <div class="r-badge__wrapper r-action-bar-icon__icon">
    Custom Icon
    <div class="r-badge r-badge--top-right r-badge--dot r-badge--fixed">
    </div>
  </div>
  Content
</div>
`;

exports[`should render icon-prefix correctly 1`] = `
<div role="button"
     class="r-action-bar-icon"
     tabindex="0"
>
  <div class="r-badge__wrapper my-icon my-icon-success r-action-bar-icon__icon">
  </div>
</div>
`;
